######################################################################
Revision history for Perl extension Data::Throttler

0.03  2009/06/27
    (ms) Replaced DBM::Deep by YAML backend
    (ms) Fixed bug RT47189 (reported by Jools Smyth)

0.02  2008/03/07
    (ms) Persistent file now only modified on write attempts. This allows 
         for read attempts without knowing the bucket parameters of a 
         throttler data file.

0.01  2007/04/08
    (ms) Where it all began.