@@ -7,4 +7,5 @@ MANIFEST.SKIP
 README
 t/001Basic.t
 t/002File.t
+t/003Bug.t
 Throttler.pm
