@@ -1,5 +1,5 @@
 ######################################################################
-    Data::Throttler 0.02
+    Data::Throttler 0.03
 ######################################################################
 
 NAME
@@ -26,7 +26,10 @@ SYNOPSIS
         my $throttler = Data::Throttler->new(
             max_items => 100,
             interval  => 3600,
-            db_file   => "/tmp/mythrottle.dat",
+            backend   => "YAML",
+            backend_options => {
+                db_file => "/tmp/mythrottle.yml",
+            },
         );
 
         if($throttler->try_push(key => "somekey")) {
@@ -57,8 +60,17 @@ DESCRIPTION
         my $throttler = Data::Throttler->new(
             max_items => 100,
             interval  => 3600,
-            db_file   => "/tmp/mythrottle.dat",
+            backend   => "YAML",
+            backend_options => {
+                db_file => "/tmp/mythrottle.yml",
+            },
         );
+
+    The call above will reuse an existing backend store, given that the
+    "max_items" and "interval" settings are compatible and leave the stored
+    counter bucket chain contained therein intact. To specify that the
+    backend store should be rebuilt and all counters be reset, use the
+    "reset => 1" option of the Data::Throttler object constructor.
 
     In the simplest case, "Data::Throttler" just keeps track of single
     events. It allows a certain number of events per time frame to succeed
@@ -158,7 +170,11 @@ DESCRIPTION
 
     Speaking of debugging, there's a utility method "buckets_dump" which
     returns a string containing a formatted representation of what's in each
-    bucket. So the code
+    bucket. It requires the CPAN module Text::ASCIITable, so make sure to
+    have it installed before calling the method. The module is not a
+    requirement for Data::Throttler on purpose.
+
+    So the code
 
         use Data::Throttler;
     
